k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saas-template
  labels:
    name: saas-template
    environment: production
